@@ -17,7 +17,7 @@ describe 'An anonymous (plaintext) FTP session' do
   let(:client_manifest) {
     <<-EOS
       # Switch firewall control from firewalld over to iptables in EL7
-      # Presumably this would already be done on a runnying system.
+      # Presumably this would already be done on a running system.
       include 'iptables'
       iptables::listen::tcp_stateful { 'ssh':
         dports       => 22,
@@ -50,7 +50,7 @@ describe 'An anonymous (plaintext) FTP session' do
   let(:server_manifest) {
     <<-EOS
       # Switch firewall control from firewalld over to iptables in EL7
-      # Presumably this would already be done on a runnying system.
+      # Presumably this would already be done on a running system.
       include 'iptables'
       iptables::listen::tcp_stateful { 'ssh':
         dports       => 22,
