@@ -1,3 +1,6 @@
+* Tue Nov 14 2017 Liz Nemsick <lnemsick.simp@gmail.com> - 7.0.2-0
+- Update acceptance test to work on server with selinux enforcing
+
 * Thu Jul 06 2017 Liz Nemsick <lnemsick.simp@gmail.com> - 7.0.1-0
 - Confine puppet version in metadata.json
 
